[package]
name = "fractal_demo"
version = "0.1.0"
authors = ["韩朴宇 <w12101111@gmail.com>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.17.0" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = ["persistence"]
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]
eframe = { git = "https://github.com/emilk/egui", rev = "95efbbc03e40602abdb4a94bc178ef1c6cb3e6a2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
